# bc-karte

./: README.md  bezier_city_model.json  bezier_city_web.json  check.py  city.py  city_builder.py  draw.py  gehen.py  index.html  neu.py  poly.py  pyproject.toml  sanity.py
